@@ -2,78 +2,87 @@ import groovy.json.*
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.8
-targetCompatibility = 14
+sourceCompatibility = 14
+targetCompatibility = 1.8
 
-repositories{
+sourceSets.main {
+    java.srcDir 'src'
+    resources.srcDir 'assets'
+}
+
+repositories {
     mavenCentral()
-    maven{url 'https://www.jitpack.io'}
+    maven { url 'https://www.jitpack.io' }
 }
 
-def json = new JsonSlurper()
+ext {
+    def json = new JsonSlurper()
+    def libs = "$rootDir/build/libs"
+    def modfile = file("${sourceSets.main.resources.srcDirs.last()}/mod.json")
 
-ext{
-    mod = json.parseText(file("assets/mod.json").text)
-
-    mindustryVersion = "v${mod['minGameVersion']}"
+    mod = json.parseText(modfile.text)
+    modName = mod['name']
+    modMindustryVersion = mod['minGameVersion']
     modVersion = mod['version']
-    sdkVersion = '30'
-    sdkRoot = System.getenv("ANDROID_HOME")
-    archivesBaseName = project.name + (!project.modVersion.isEmpty() ? "-$project.modVersion" : "")
 
-    doExec = { cmd ->
-        def proc = cmd.execute(null, new File("$buildDir/libs"))
-        proc.waitForProcessOutput(System.out, System.err)
-    }
+    artifactBaseName = modName + (!modVersion.isEmpty() ? "-$modVersion" : "")
+
+    jarPath = "$libs/${artifactBaseName}-desktop.jar"
+    dexPath = "$libs/${artifactBaseName}-android.jar"
+
+    versions = [:]
+    versions.mindustry = 'v' + modMindustryVersion
+    versions.jabel = '0.3.0'
 }
 
-dependencies{
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+dependencies {
+    compileOnly "com.github.Anuken.Arc:arc-core:$versions.mindustry"
+    compileOnly "com.github.Anuken.Mindustry:core:$versions.mindustry"
+
+    annotationProcessor "com.github.bsideup.jabel:jabel-javac-plugin:$versions.jabel"
 }
 
-allprojects{
-    tasks.withType(JavaCompile){
-        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-            options.compilerArgs += ['--release', '8']
+task desktop(type: Jar) {
+    archiveBaseName.set "$artifactBaseName-desktop"
+
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
         }
     }
 }
 
-task jarAndroid{
-    dependsOn "jar"
+task android(type: Exec, dependsOn: desktop) {
+    def command = [
+        'd8', jarPath,
+        '--min-api', '19',
+        '--output', dexPath
+    ]
 
-    doLast{
-        def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
-        def dependencies = files.collect{"--classpath $it.path"}.join(" ")
+    if (System.getProperty('os.name').toLowerCase().contains('windows')) {
+        commandLine("cmd", "/c", *command)
+    } else {
+        commandLine(*command)
+    }
+}
 
-        if(System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')){
-            doExec("cmd.exe /c d8 $dependencies --min-api 14 --output ${project.archivesBaseName}-Android.jar ${project.archivesBaseName}-Desktop.jar")
-        }else{
-            doExec("d8 $dependencies --min-api 14 --output ${project.archivesBaseName}-Android.jar ${project.archivesBaseName}-Desktop.jar")
+task dist(type: Jar, dependsOn: android) {
+    archiveBaseName.set artifactBaseName
+
+    from zipTree(jarPath), zipTree(dexPath)
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs = [
+            '--release', '8',
+            '--enable-preview',
+    ]
+
+    options.compilerArgs << '-Xplugin:jabel'
+
+    doFirst {
+        options.compilerArgs = options.compilerArgs.findAll {
+            it != '--enable-preview'
         }
-    }
-}
-
-jar{
-    archiveFileName = "${project.archivesBaseName}-Desktop.jar"
-
-    from{configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}}
-
-    from("assets/"){
-        include "**"
-    }
-}
-
-task deploy(type: Jar){
-    dependsOn jarAndroid
-    dependsOn jar
-    archiveFileName = "${project.archivesBaseName}.jar"
-
-    from{[zipTree("$buildDir/libs/${project.archivesBaseName}-Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}-Android.jar")]}
-
-    doLast{
-        delete{delete "$buildDir/libs/${project.archivesBaseName}-Desktop.jar"}
-        delete{delete "$buildDir/libs/${project.archivesBaseName}-Android.jar"}
     }
 }
